--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/compiler": "~9.0.0-rc.5",
     "@angular/core": "~9.0.0-rc.5",
     "@angular/forms": "~9.0.0-rc.5",
-    "@angular/google-maps": "^9.0.0-rc.0",
+    "@angular/google-maps": "^9.2.1",
     "@angular/material": "next",
     "@angular/platform-browser": "~9.0.0-rc.5",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.5",
